tests/sumo/spec/flow/errors/testsuite.sumo
period_per_hour

period_no_end

repetition_missing

neg_begin

end_before_begin

neg_period

neg_repno

zero_period
